# darkcat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  darkcat  instructions.txt  pyproject.toml  requirements.txt
darkcat/: __init__.py  cli.py  config.py  crawler.py  entries.py  extractor.py  fetcher.py  protocols.py  storage.py  transports.py  tui.py
docs/: CONFIG.md  INTERNALS.md  NETWORKS.md  QUICKSTART.md  USERGUIDE.md
docs/identity/: 01-overview.md  02-cli-reference.md  03-providers.md  04-transports.md  05-vault-and-status.md  06-frontend-parity.md  07-protonmail-walkthrough.md  Makefile  README.md
share/applications/: darkcat.desktop
src/darkcat/: __init__.py  __main__.py  _nyan_ascii.py  auth.py  blocklist.py  categorize.py  cli.py  config.py  control.py  crawler.py  dashboard.py  discovery.py  elevation.py  encoded.py  entries.py  export.py  extractor.py  feeds.py  fetcher.py  gui.py  liveness.py  mail.py  mail_providers.py  ocr.py  personas.py  pgp.py  plugins.py  plugins_builtin.py  politeness.py  probe.py  protocols.py  render.py  repl.py  scanner.py  scheduler.py  seeds.py  server.py  storage.py  telegram.py  theme.py  (+6 more)
src/darkcat/chat/: __init__.py  base.py  briar.py  matrix.py  ricochet.py  session.py  simplex.py  telegram.py  tox.py  xmpp.py
src/darkcat/identity/: __init__.py  generator.py  launcher.py  transport.py  vault.py
src/darkcat/identity/providers/: __init__.py  base.py  briar.py  discord.py  disroot.py  gmail.py  mailfence.py  mastodon.py  matrix.py  outlook.py  protonmail.py  protonvpn.py  reddit.py  ricochet.py  session.py  simplex.py  telegram.py  tox.py  tunnelbear.py  tutanota.py  twitter.py  windscribe.py  xmpp.py  yahoo.py
tests/: test_help_index.py  test_identity.py  test_mail.py  test_theme.py  test_tui_screens.py  test_ux_polish.py
tools/: render_instructions_pdf.py
