[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkcat"
version = "0.2.0"
description = "Multi-protocol darknet & overlay-network crawler (Tor, I2P, IPFS, Freenet, Lokinet, GNUnet, ZeroNet, Gemini, Gopher, Spartan, NEX, Hyper, Yggdrasil, cjdns, Namecoin, EmerCoin, ENS, Handshake, Unstoppable, OpenNIC and more) with topic filtering, CLI and Textual TUI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Overdrive (Borja Tarraso)", email = "borja.tarraso@member.fsf.org" },
]
maintainers = [
    { name = "Overdrive (Borja Tarraso)", email = "borja.tarraso@member.fsf.org" },
]
keywords = [
    "darknet", "tor", "onion", "i2p", "ipfs", "freenet", "lokinet",
    "gemini", "gopher", "crawler", "overlay-network",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31",
    "PySocks>=1.7.1",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "rich>=13.0",
    "textual>=0.60",
]

[project.optional-dependencies]
# Tab-completion in bash / zsh / fish via `register-python-argcomplete darkcat`.
# Soft-imported by darkcat.cli — install only if you want shell completion.
completion = ["argcomplete>=3.0"]
# Headless JS rendering for `darkcat fetch --render` / `crawl --render`.
# After install, run `playwright install chromium` once.
render = ["playwright>=1.40"]
# EIP-55 strict-mode for the Ethereum address scanner. Without it, mixed-case
# ETH addresses fall back to lower confidence (still detected, just unverified).
crypto = ["pycryptodome>=3.19"]
# `darkcat chat` backends. Each is independently installable so users can
# pull in only the messengers they actually use:
#   chat-telegram   real Telegram user-account login (MTProto)
#   chat-matrix     federated Matrix client; add 'matrix-nio[e2e]' for E2EE
#   chat-xmpp       slixmpp client
#   chat-simplex    websocket client to drive simplex-chat daemon
# Session, Tox, Briar, Ricochet have no Python deps — install their
# upstream binary (session-cli, qTox, briar-headless, Ricochet Refresh).
chat-telegram = ["telethon>=1.34"]
chat-matrix = ["matrix-nio>=0.24"]
chat-xmpp = ["slixmpp>=1.8"]
chat-simplex = ["websocket-client>=1.7"]
chat = [
    "telethon>=1.34",
    "matrix-nio>=0.24",
    "slixmpp>=1.8",
    "websocket-client>=1.7",
]
all = [
    "argcomplete>=3.0",
    "playwright>=1.40",
    "pycryptodome>=3.19",
    "telethon>=1.34",
    "matrix-nio>=0.24",
    "slixmpp>=1.8",
    "websocket-client>=1.7",
]

[project.urls]
Homepage      = "https://github.com/borjatarraso/darkcat"
Source        = "https://github.com/borjatarraso/darkcat"
Repository    = "https://github.com/borjatarraso/darkcat.git"
"Bug Tracker" = "https://github.com/borjatarraso/darkcat/issues"

[project.scripts]
darkcat = "darkcat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["darkcat*"]

[tool.setuptools.package-data]
darkcat = ["assets/*.png", "assets/logos/*.png"]
